# treeface

./: CMakeLists.txt  LICENSE  README.md  uncrustify.cfg
src/: CMakeLists.txt  gen_iter_sphere.cpp  nedmalloc.cpp  nedmalloc.h
src/treeface/: Common.h  Mat4.h  Vec4.h  Vec4f.h  common.cpp  common.h  config.h.in  enums.h  face.cpp  face.h  geometrymanager.cpp  geometrymanager.h  image.cpp  image.h  imagemanager.cpp  imagemanager.h  keyboard.h  material.cpp  material.h  materialmanager.cpp  materialmanager.h  math.h  nedbase.cpp  nedbase.h  object.h  packagemanager.cpp  packagemanager.h  programmanager.cpp  programmanager.h  resourcemanager.cpp  resourcemanager.h  simd.h  stringcast.cpp  stringcast.h  ui.h  widgets.h
src/treeface/atomic/: msvc.h
src/treeface/base/: Common.cpp  Enums.h  PackageManager.cpp  PackageManager.h
src/treeface/event/: Event.h  Keyboard.h  NativeWindow.h  NativeWindow_sdl.cpp  event.h  nativewindow.h  nativewindow_sdl.cpp
src/treeface/gl/: Enums.h  Errors.cpp  Errors.h  FrameBuffer.h  Framebuffer.cpp  Framebuffer.h  GLBuffer.cpp  GLBuffer.h  ImageRef.cpp  ImageRef.h  Program.cpp  Program.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  TypeUtils.cpp  TypeUtils.h  VertexArray.cpp  VertexArray.h  VertexAttrib.h  VertexTemplate.cpp  VertexTemplate.h  buffer.cpp  buffer.h  enums.h  error.cpp  glbuffer.cpp  glbuffer.h  imageref.cpp  imageref.h  program.cpp  program.h  programmanager.cpp  programmanager.h  sampler.cpp  sampler.h  sceneprogram.cpp  sceneprogram.h  texture.cpp  (+10 more)
src/treeface/graphics/: BBox2.h  HalfEdge.h  Image.cpp  Image.h  ImageManager.cpp  ImageManager.h  ShapeGenerator.cpp  ShapeGenerator.h  Utils.h  VectorGraphicsMaterial.cpp  VectorGraphicsMaterial.h  halfedge.h  shapegenerator.cpp  shapegenerator.h  utils.h
src/treeface/guts/: face_guts.cpp  face_guts.h  geomsucker.cpp  geomsucker.h  material_guts.h  node_guts.cpp  node_guts.h  scene_guts.h  shapegenerator_guts.cpp  shapegenerator_guts.h  widget_guts.cpp  widget_guts.h
src/treeface/math/: Constants.h  Mat2.cpp  Mat2.h  Mat3.cpp  Mat3.h  Mat4.cpp  Mat4.h  MatUtils.cpp  MatUtils.h  Quat.h  Vec2.h  Vec3.h  Vec4.h  bbox2.h  constants.h  mat2.cpp  mat2.h  mat3.cpp  mat3.h  mat4.cpp  mat4.h  matutils.cpp  matutils.h  quat.h  vec2.h  vec3.h  vec4.h
src/treeface/misc/: PropertyValidator.cpp  PropertyValidator.h  SteakingArray.h  StringCast.cpp  StringCast.h  TypedTemplate.h  TypedTemplateWithLocation.h  TypedTemplateWithOffset.h  UniversalValue.cpp  UniversalValue.h  error.h  propertyvalidator.cpp  propertyvalidator.h  steakingarray.h  stringcast.cpp  stringcast.h  universalvalue.cpp  universalvalue.h  vertextemplate.cpp  vertextemplate.h
src/treeface/post/: PostProcess.cpp  PostProcess.h  PostSurface.cpp  PostSurface.h  PostTarget.cpp  PostTarget.h  ScreenSpaceMaterial.cpp  ScreenSpaceMaterial.h  TexturePostSurface.cpp  TexturePostSurface.h
src/treeface/private/: material_private.h  node_private.cpp  node_private.h
src/treeface/scene/: Geometry.cpp  Geometry.h  GeometryManager.cpp  GeometryManager.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  Scene.cpp  Scene.h  SceneGraphMaterial.cpp  SceneGraphMaterial.h  SceneNode.cpp  SceneNode.h  SceneNodeManager.cpp  SceneNodeManager.h  SceneObject.cpp  SceneObject.h  SceneQuery.cpp  SceneQuery.h  SceneRenderer.cpp  SceneRenderer.h  VisualObject.cpp  VisualObject.h  geometry.cpp  geometry.h  geometrymanager.cpp  geometrymanager.h  material.cpp  material.h  materialmanager.cpp  materialmanager.h  node.cpp  node.h  nodemanager.cpp  nodemanager.h  scene.cpp  scene.h  scenegraphmaterial.cpp  scenegraphmaterial.h  (+15 more)
src/treeface/simd/: fallback.h  sse2.h  template.h
src/treeface/ui/: Widget.cpp  Widget.h  event.h  widget.cpp  widget.h  (+2 more)
src/treejuce/: Array.h  ArrayAllocationBase.h  Atomic.h  BasicNativeHeaders.h  BigInteger.cpp  BigInteger.h  BufferedInputStream.cpp  BufferedInputStream.h  ByteOrder.h  CharPointer_ASCII.h  CharPointer_UTF16.h  CharPointer_UTF32.h  CharPointer_UTF8.h  CharacterFunctions.cpp  CharacterFunctions.h  ChildProcess.cpp  ChildProcess.h  Common.h  ContainerDeletePolicy.h  CriticalSection.h  DirectoryIterator.cpp  DirectoryIterator.h  DynamicLibrary.h  DynamicObject.cpp  DynamicObject.h  ElementComparator.h  Expression.cpp  Expression.h  File.cpp  File.h  FileFilter.cpp  FileFilter.h  FileInputSource.cpp  FileInputSource.h  FileInputStream.cpp  FileInputStream.h  FileLogger.cpp  FileLogger.h  FileOutputStream.cpp  FileOutputStream.h  (+113 more)
src/zlib/: zconf.h
t/: CMakeLists.txt  TestFramework.cpp  TestFramework.h  t_atomic.cpp  t_geom_visual_obj_chain.cpp  t_geometry.cpp  t_geometry_load_align.cpp  t_image_manager.cpp  t_line_cross.cpp  t_mat2f.cpp  t_mat3.cpp  t_mat4.cpp  t_mat4_quat_rot.cpp  t_material.cpp  t_material_resource.cpp  t_ned_object.cpp  t_node_manager.cpp  t_node_uniform_hier.cpp  t_object.cpp  t_package_manager_keep_existing.cpp  t_package_manager_overwrite.cpp  t_package_manager_use_newer.cpp  t_package_manager_use_older.cpp  t_property_validator.cpp  t_quat.cpp  t_resource_manager_keep_existing.cpp  t_resource_manager_overwrite.cpp  t_resource_manager_use_newer.cpp  t_resource_manager_use_older.cpp  t_scene.cpp  t_sdl2_leak.cpp  t_simd.cpp  t_simd_xor_flip.cpp  t_steaking_array.cpp  t_vec2f.cpp  t_vec3f.cpp  t_vec4.cpp  t_vertex_template.cpp  t_widget_hierarchy.cpp
test/: CMakeLists.txt  curve_edit.cpp  draw_triangulate.pl  fbodemo.cpp  freeimage_format.cpp  geometry_and_material.cpp  interact.cpp  interact_wrap.cpp  json_traverse.cpp  line_stroke.cpp  path_bessel4.tab  path_bessel4_dense.tab  path_bessel4_horizon.tab  path_knot_start.tab  path_knot_turn.tab  path_zig_multi.tab  polygon_monotone.cpp  polygon_triangle.cpp  scene_global_light.cpp  scene_renderer.cpp  sdl_event.cpp  sdl_keyboard_scancode.cpp  sdl_text.cpp  sdl_window_prop.cpp  shape_claw2_ccw.tab  shape_claw3_cc2.tab  shape_mountain_ccw.tab  shape_poly_ccw.tab  shape_star_ccw.tab  shape_star_cw.tab  shape_tri_simple_ccw.tab  shape_zigzag.tab  shape_zigzag_cclw.tab  subpath_triangulate.cpp  texture.cpp
(+116 files in other folders)
